Bug 268264 - [Site Isolation] Fix more cases where we unnecessarily skip code on out-of-process frames
Summary: [Site Isolation] Fix more cases where we unnecessarily skip code on out-of-pr...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Process Model (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Charlie Wolfe
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2024-01-28 15:57 PST by Charlie Wolfe
Modified: 2024-01-29 14:14 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Charlie Wolfe 2024-01-28 15:57:00 PST
...
Comment 1 Radar WebKit Bug Importer 2024-01-28 15:57:13 PST
<rdar://problem/121820132>
Comment 2 Charlie Wolfe 2024-01-28 16:25:12 PST
Pull request: https://github.com/WebKit/WebKit/pull/23397
Comment 3 EWS 2024-01-29 14:14:40 PST
Committed 273688@main (3cb486b7095a): <https://commits.webkit.org/273688@main>

Reviewed commits have been landed. Closing PR #23397 and removing active labels.